<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/infor_lead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infor_lead"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infor_lead"
        app:layout_constraintBottom_toTopOf="@id/abort_button">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/infor_lead"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/title_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/infor_bg"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_infor"
                        android:textSize="14sp"
                        android:background="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/title_arrow"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_arrow"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@null" />
                </LinearLayout>

                <EditText
                    android:id="@+id/infor_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:textSize="14sp"
                    android:hint="@string/firt_name"
                    app:layout_constraintStart_toEndOf="@id/title_l"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/infor_bg" />
            </LinearLayout>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="14sp"
                android:background="@drawable/infor_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:id="@+id/phone_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/phone_infor"
                android:background="@drawable/infor_bg"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/email_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/email"
                android:background="@drawable/infor_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <EditText
                android:id="@+id/sex_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/sex_infor"
                android:background="@drawable/infor_bg"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/birthday_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/birthday"
                android:background="@drawable/infor_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <EditText
                android:id="@+id/state_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/state_infor"
                android:background="@drawable/infor_bg"
                android:layout_margin="10dp"
                />

            <EditText
                android:id="@+id/state_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_detail"
                android:background="@drawable/infor_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="normal"
                android:textSize="14sp"
                android:minLines="6"
                android:gravity="top|start"/>

            <EditText
                android:id="@+id/another_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/another_email"
                android:background="@drawable/infor_bg"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/another_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/another_phone"
                android:background="@drawable/infor_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/abort_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        android:backgroundTint="@color/light_blue"
        android:text="@string/abort"
        android:textColor="@color/blue"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/abort_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/blue2"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>