<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin5"
    android:background="@color/bg_lead"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">

        <!--Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_user"
                android:contentDescription="@null"
                android:layout_margin="@dimen/margin_icon"
                app:tint="@color/color_icon"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/cus_name" />

            <ImageView
                android:id="@+id/iv_dots"
                android:contentDescription="@null"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/dots"
                android:layout_margin="5dp"
                android:foregroundGravity="center"
                app:tint="@color/seemore_color"/>

        </LinearLayout>
        <!--end name-->

        <!--Company-->
        <LinearLayout
            android:id="@+id/ll_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/top_padding"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="@dimen/margin_icon"
                android:src="@drawable/building"
                app:tint="@color/color_icon"
                />

            <TextView
                android:id="@+id/tv_Company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_icon"
                android:text="@string/cus_Company"
                android:textSize="14sp" />

        </LinearLayout>
        <!--End company-->

        <!--job-->
        <LinearLayout
            android:id="@+id/ll_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/top_padding"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:foregroundGravity="center"
                android:src="@drawable/categories"
                android:contentDescription="@null"
                android:layout_margin="@dimen/margin_icon"
                app:tint="@color/color_icon"/>

            <TextView
                android:id="@+id/tv_job"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text"
                android:textStyle="normal"
                android:text="@string/job_infor"
                android:layout_marginBottom="@dimen/margin_icon"/>

            <ImageView
                android:id="@+id/iv_job"
                android:contentDescription="@null"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/briefcase"
                app:tint="@color/color_icon"
                android:layout_margin="@dimen/margin_icon"
                android:foregroundGravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Nhân viên kinh doanh"
                android:layout_marginBottom="@dimen/margin_icon"/>

        </LinearLayout>
        <!-- End job-->

        <!--Day-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/top_padding">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="@dimen/margin_icon"
                app:tint="@color/color_icon"
                android:src="@drawable/ic_calendar"/>

            <TextView
                android:id="@+id/tv_Day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cus_Day"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/margin_icon"/>

        </LinearLayout>
        <!--End day-->

        <!--called and comments-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/top_padding"
            android:gravity="center_vertical"
            >
            <!--Call-->
            <ImageView
                android:id="@+id/number_calls"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_call"
                app:tint="@color/seemore_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"/>
            <!--End call-->

            <!--Comment-->
            <ImageView
                android:id="@+id/comments"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_comment_mess"
                android:layout_marginStart="@dimen/margin_action"
                android:contentDescription="@null"
                app:tint="@color/seemore_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"/>
            <!--End comment-->

        </LinearLayout>
        <!--end called and comments-->

        <TextView
            android:id="@+id/Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cus_Contact"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/seemore_color"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>